2005-08-15  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* doc/descriptions/plustek.desc: Updated version number.
	* backend/plustek.h. backend/plustek-usb.h backend/plustek-usbcalfile.c
	  backend/plustek-usbimg.c backend/plustek-usbmap.c
	  backend/plustek-usbdevs.c backend/plustek-usbscan.c: Cleanup.
	* backend/plustek.c: Bumped version and build number.
	  Activated IPC between reader-process and parent.
	* backend/plustek-usbio.c: usbio_DetectLM983x() now returns error if
	  register could not be red, usbio_ResetLM983x() checks for reg7 
	  value before writing.
	* backend/plustek-usbhw.c: Added button support for Plustek/Genius 
	  devices. Changed behaviour of usb_IsScannerReady().
	  Added special misc I/O setup for CIS devices (usb_ResetRegisters).
	* backend/plustek-usb.c: Minor fix for startup reset.
	  Removed unnecessary calls to usbio_ResetLM983x().
	* backend/plustek-usbshading.c: Readded kCIS670 to add 5% extra to 
	  LiDE20 fine calibration.
	* backend/plustek-usbcal.c: Tried to use the settings from SANE-1.0.13.
	  Added _TWEAK_GAIN to allow increasing GAIN during lamp coarse 
	  calibration. Added call to speedtest function.

2005-08-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* Makefile.in: Added Changelog-1.0.16 to DISTFILES.
	* backend/hp4200.c doc/sane-hp4200.man
	  doc/descriptions/hp4200.desc: Enabled backtracking by
	  default. This is slower but avois bumping the scan head at the end
	  of the scan area and also missing parts of the scanned
	  image. Increased safety margin for backtracking. This fixes the
	  "garbled image" bug. Set default gamma value to 2. Manpage
	  update. Status set to "basic".
	* frontend/scanimage.c: Don't exit with error when trying to set
	  inactive options. This especially happens in connection with
	  geometry options and the v4l backend (bugs #300321, #301977).

2005-08-13  Henning Meier-Geinitz <henning@meier-geinitz.de>
