@@ -107,3 +107,6 @@ usb 0x04b8 0x011f
 
 # Epson Perfection 2480
 usb 0x04b8 0x0121
+
+# Epson Perfection 3490
+usb 0x04b8 0x0122
